feat: Add installment group common fields update feature